增加JVM学习笔记